--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "sass": "^1.23.7"
   },
   "scripts": {
